# gosen-engines

./: .gitignore  Cargo.toml  Dockerfile  README.md
libs/ai-orchestrator/: Cargo.toml
libs/ai-orchestrator/src/: lib.rs
libs/image-processor/: Cargo.toml
libs/image-processor/src/: lib.rs
services/kitchy-router/: Cargo.toml
services/kitchy-router/src/: main.rs
services/verso-router/: ARCHITECTURE.md  Cargo.toml
services/verso-router/src/: agent_rules.rs  ai.rs  analyze.rs  business_rules.rs  cache.rs  db.rs  detect.rs  extract.rs  languages.rs  main.rs  parser.rs  translate.rs  translate_repo.rs  zombie.rs
services/verso-router/src/rules/: cobol.rs  html_tsx.rs  java_kotlin.rs  jquery.rs  js_ts.rs  mod.rs  mysql_postgres.rs  objc_swift.rs  php.rs  react.rs  vb_csharp.rs
