[package]
name = "kitchy-router"
version = "0.1.0"
edition = "2021"

[dependencies]
# Dependencias globales del Workspace
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Dependencias internas de nuestro Workspace (Local Crates)
image-processor = { path = "../../libs/image-processor" }
ai-orchestrator = { path = "../../libs/ai-orchestrator" }
