[package]
name = "verso-router"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

sha2 = "0.10"
hex = "0.4"
regex = "1"
once_cell = "1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-cpp = "0.23"
arborium-cobol = "2.10.0"
tempfile = "3"
walkdir = "2"
sqlx = { version = "0.9.0", features = ["postgres", "tls-rustls", "runtime-tokio"] }

[dev-dependencies]
arborium-cobol = "2.10.0"
